# lilykde

./: INSTALL  Makefile  NEWS  README  THANKS  TODO  VERSION  config.mk  hyphen.py  hyphenator.py  katefiletyperc  ktexteditservice  ktexteditservice.py  lilykde.py  lilykde_i18n.py  lilypond-servicemenu-helper.py  lilypond-servicemenu.desktop.in  lilypond.js  lilypond.py  lilypond.xml  lylog.py  lymenu.py  lypdf.py  lyutil.py  lyversion.py  makedist.sh  rational.py  runpty.py  textedit.protocol  textedit.protocol.in  x-lilypond.conf  x-lilypond.desktop
frescobaldi/: CMakeLists.txt  ChangeLog  INSTALL  README  README-development  THANKS  TODO  checkmodules.py  frescobaldi.py  makedist.sh  run
frescobaldi/cmake/modules/: FindGettext.cmake  FindKDEInstallDirs.cmake  FindPyKDE4.cmake  Python.cmake  PythonCompileFile.py  uninstall.cmake
frescobaldi/cmake/scripts/: uninstall_file.cmake  uninstall_from_manifest.cmake
frescobaldi/css/: lilydoc.css  style.css
frescobaldi/data/: CMakeLists.txt  expansions  frescobaldi-lily.svgz  frescobaldi.desktop  frescobaldi.notifyrc  frescobaldirc  frescobaldiui.rc  lilydoc.css
frescobaldi/doc/: CMakeLists.txt  about.docbook  configuring.docbook  editing.docbook  entering.docbook  extras.docbook  first-steps.docbook  index.docbook  introduction.docbook  lilydoc.docbook  running.docbook  sessions.docbook
frescobaldi/gentoo/: README-ebuild  frescobaldi.ebuild
frescobaldi/icons/hicolor/scalable/actions/: run-lilypond.svgz
frescobaldi/pics/: CMakeLists.txt  arpeggio_arrow_down.ly  arpeggio_arrow_up.ly  arpeggio_bracket.ly  arpeggio_defaults.ily  arpeggio_normal.ly  arpeggio_parenthesis.ly  articulation_defaults.ily  articulation_downbow.ly  articulation_espressivo.ly  articulation_flageolet.ly  articulation_halfopen.ly  articulation_open.ly  articulation_portato.ly  articulation_reverseturn.ly  articulation_segno.ly  articulation_snappizzicato.ly  articulation_tenuto.ly  bar_cswc.ly  bar_cswsc.ly  bar_dashed.ly  bar_defaults.ily  bar_dotted.ly  bar_double.ly  bar_end.ly  bar_invisible.ly  bar_repeat_double.ly  bar_repeat_end.ly  bar_repeat_start.ly  bar_segno.ly  bar_single.ly  bar_sws.ly  bar_tick.ly  bar_ws.ly  bar_ww.ly  breathe_caesura_curved.ly  breathe_caesura_straight.ly  breathe_defaults.ily  breathe_rcomma.ly  breathe_rvarcomma.ly  (+52 more)
frescobaldi/plasma/: metadata.desktop
frescobaldi/plasma/contents/code/: main.py
frescobaldi/po/: CMakeLists.txt  README-translations  cs.po  de.po  desktop2py.py  dummy.py  es.po  fr.po  frescobaldi.pot  gl.po  it.po  nl.po  pl.po  ru.po  tr.po  update-po.sh
frescobaldi/python/: CMakeLists.txt  hyphenator.py  runpty.py  signals.py
frescobaldi/python/frescobaldi_app/: __init__.py  actions.py  blankpaper.py  charselect.py  completion.py  document.py  download.py  expand.py  highlight.py  hyphen.py  install.py  kmid.py  lilydoc.py  lqi.py  mainapp.py  mainwindow.py  parts.py  progress.py  rumor.py  runlily.py  scorewiz.py  sessions.py  settings.py  version.py  widgets.py
frescobaldi/python/frescobaldi_app/scorewiz/: __init__.py  parts.py  preview.py
frescobaldi/python/kateshell/: __init__.py  app.py  exception.py  fileprinter.py  mainwindow.py  sessions.py  shortcut.py  widgets.py
frescobaldi/python/ly/: __init__.py  articulation.py  colors.py  dom.py  duration.py  font.py  indent.py  key.py  parse.py  pitch.py  rx.py  tokenize.py  tools.py  version.py  words.py
frescobaldi/rumor/: azerty-kbd.scm  metronome-piano.scm  rhythm68.scm
gentoo/: README-ebuild  lilykde-svn-1.0.ebuild  lilykde.ebuild
lilykde/: Makefile  NEWS  TODO  __init__.py  config.py  editor.py  hyphen.py  i18n.py  install.py  kateutil.py  ktexteditservice.py  lilydom.py  lilydomext.py  lilykde.py  log.py  logwidget.py  lqi.py  menu.py  parts.py  pdf.py  pdftk.py  rumor.py  runlily.py  scorewiz.py  settings.py  uiutil.py  util.py  version.py  widgets.py
lilykde/gentoo/: pate-0.5.1.ebuild
lilykde/pics/: Makefile  articulation_coda.ly  articulation_downprall.ly  articulation_espressivo.ly  articulation_fermata.ly  articulation_lheel.ly  articulation_ltoe.ly  articulation_mordent.ly  articulation_prall.ly  articulation_pralldown.ly  articulation_prallprall.ly  articulation_prallup.ly  articulation_shortfermata.ly  articulation_signumcongruentiae.ly  articulation_staccatissimo.ly  articulation_varcoda.ly  articulation_verylongfermata.ly  c22.ly  c44.ly  icon_rhythm.ly  note_2d.ly  note_8d.ly
lilykde/po/: README-translations  de.po  es.po  lilykde.pot  nl.po  ru.po  tr.po
lilykde/py/: runpty.py
lilykde/py/lilykde/: hyphen.py  install.py  settings.py  version.py
lilykde/rumor/: Makefile
lilypond-kde4/: CMakeLists.txt  INSTALL  Makefile  README  TODO  VERSION  config.mk  ktexteditservice  ktexteditservice.cpp  ktexteditservicerc  lilypond.js  makedist.sh  textedit.protocol
lilypond-kde4/debian/: changelog  control  copyright  rules
lilypond-kde4/gentoo/: README  lilypond-kde4.ebuild
lilypond-kde4/icons/: CMakeLists.txt
lilypond-kde4/icons/crystalsvg/: text-x-lilypond.svgz
lilypond-kde4/icons/hicolor/: text-x-lilypond.svgz
lilypond-kde4/icons/oxygen/: text-x-lilypond.svgz
mup2ly/: mup2ly.py
pics/: Makefile  articulation_accent.ly  articulation_defaults.ily  articulation_downmordent.ly  articulation_lineprall.ly  articulation_longfermata.ly  articulation_marcato.ly  articulation_prallmordent.ly  articulation_rheel.ly  articulation_rtoe.ly  articulation_staccato.ly  articulation_stopped.ly  articulation_thumb.ly  articulation_trill.ly  articulation_turn.ly  articulation_upbow.ly  articulation_upmordent.ly  articulation_upprall.ly  note_1.ly  note_16.ly  note_16d.ly  note_1d.ly  note_2.ly  note_2d.ly  note_4.ly  note_4d.ly  note_8.ly  note_8d.ly  note_defaults.ily  scorewiz.ly
po/: Makefile  README-translations  de.po  es.po  fr.po  it.po  lilykde.pot  nl.po  ru.po  tr.po
py/lilykde/: Makefile  actions.py  editor.py  kateutil.py  lilyinterfaces.py  lqi.py  menu.py  pdf.py  rumor.py  scorewiz.py  widgets.py
py/ly/: dom.py  domext.py
rumor/: Makefile
